# XPOT

./: README.md  cov.xml  pyproject.toml  requirements.txt
docs/source/: conf.py  examples.rst  quickstart.rst
docs/source/api/: index.rst  loaders.rst  maths.rst  optimisers.rst
examples/: ace_input.hjson  ace_optimise.ipynb  ace_optimise.py  gap_input.hjson  gap_optimise.ipynb  snap_input.hjson  snap_optimise.ipynb  snap_optimise.py
examples/analysis_graphing/: XPOT_Graph_Analysis.ipynb
examples/gap-single-fit/: GAP.hjson  README.md  gap-oneshot.py
examples/gap-single-fit/input_data/: testing_database.xyz
examples/gap_C_XYZ/: bulk_cryst_train.xyz  bulk_cryst_train.xyz.idx
examples/opt_ACE/test_ace/: loss_function_errors.csv  parameters.csv
examples/opt_GAP/test_GAP/: atomistic_errors.csv  atomistic_errors_final  loss_function_errors.csv  loss_function_errors_final  parameters.csv  parameters_final
examples/snap-optimization/: 4q-si-gap18.hjson  py-xpot.py  snap_input_updated.hjson
examples/xpot-v1.2/: ace_input.hjson  gap_input.hjson  gap_optimise.ipynb  snap_optimise.py
paper-data/C-GAP-17/SNAP/: j3_l_gap17.hjson  j4_l_gap17.hjson  j5_l_gap17.hjson  j6_l_gap17.hjson
paper-data/C-GAP-17/qSNAP/: j3_q_gap17.hjson  j4_q_gap17.hjson  j5_q_gap17.hjson  j6_q_gap17_var_cut.hjson
paper-data/C-GAP-17/test-set-opt/: best_j5_md.in  (+3 more)
src/: README.md
src/xpot/: convert.py  graphing.py  loaders.py  maths.py  optimiser.py  testing.ipynb  workflows.py
src/xpot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.ipynb  test_convert.py  test_loaders.py  test_maths.py  test_models.py  test_optimiser.py  test_workflows.py
tests/inputs/: defaults.json  hypers.hjson  mace-test.xyz  mace-train.xyz  nequip-train.xyz  nequip-train.xyz.idx  test-test.xyz  test-test.xyz.idx  test-test.xyz.pkl.gzip  test.xyz  test.xyz.pkl.gzip  test.xyz.pkl.gzip.xyz  train-test.xyz  train-test.xyz.idx  train-test.xyz.pkl.gzip
tests/mock_runs/: atomistic_errors.csv  loss_function_errors.csv  parameters.csv
xpot/: README.md
xpot/potential_parsers/: gap.py  snap.py  snap_defaults.json  snap_lammps.in  snap_lammps_total.in  snap_validate.py
xpot/transfer_funcs/: general.py  graphing.py  optimizers.py
(+91 files in other folders)
