[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
 
[project]
name = "xpot"
version = "0.0.0"
description = "Cross-Platorm Optimser for Hyperparameter Tuning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Daniel Thomas du Toit", email = "daniel@thomasdutoit.net"}]
dependencies = [
    "ase",
    "hjson",
    "joblib",
    "matplotlib",
    "numpy<2",
    "pandas",
    "PyYAML",
    "scikit_optimize",
    "tabulate",
    "quippy-ase",
]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
dev = ["notebook", "ruff"]
doc = [
    "sphinx",
    "furo",
    "nbsphinx",
    "sphinx-autobuild",
    "sphinxext-opengraph",
    "sphinx-copybutton",
]
publish = ["build", "twine"]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"
 
[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM300", "E402", "E703", "F722", "UP037", "F821", "B018", "B905"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
 
[tool.ruff.lint.pydocstyle]
convention = "numpy"